Remove Georges Chartrand from team and update hero subtitle
- Remove Georges Chartrand from team section in English and French translations
- Update team grid to 3-column centered layout (md:grid-cols-3)
- Adjust max-width to max-w-4xl for better 3-card display
- Update hero subtitle to 'From pain research to real-world relief'
- Update hero images

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -19,7 +19,7 @@
   "home": {
     "hero": {
       "title": "Transforming Mental Wellness Through Art",
-      "subtitle": "AI-Powered Art Therapy Platform",
+      "subtitle": "From pain research to real-world relief",
       "cta": "Get Started"
     },
     "problem": {
@@ -154,12 +154,6 @@
         "role": "Team Member",
         "education": "",
         "bio": "McGill Undergraduate in Electrical Engineering, in robotics team"
-      },
-      {
-        "name": "Georges Chartrand",
-        "role": "Team Member",
-        "education": "",
-        "bio": "Add description here"
       }
     ],
     "collaboration": {
