Add Waitlist to header navigation
- Added Waitlist link to NAV_LINKS in routes constants
- Updated Header component to include waitlist in nav
- Added translations for English and French
- Waitlist now accessible from main navigation menu

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -6,7 +6,8 @@
       "howItWorks": "How It Works",
       "about": "About",
       "newsMedia": "News & Media",
-      "contact": "Contact"
+      "contact": "Contact",
+      "waitlist": "Waitlist"
     },
     "footer": {
       "tagline": "Redefining how the world treats and communicates about chronic pain",
