--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -6,7 +6,8 @@
       "howItWorks": "Comment ça marche",
       "about": "À propos",
       "newsMedia": "Actualités et médias",
-      "contact": "Contact"
+      "contact": "Contact",
+      "waitlist": "Liste d'attente"
     },
     "footer": {
       "tagline": "Redéfinir la façon dont le monde traite et communique sur la douleur chronique",
